--- a/public/wakgames/unavailable.html
+++ b/public/wakgames/unavailable.html
@@ -3,7 +3,7 @@
     // alert('서버 부하로 인하여, 왁타버스 게임즈 연동이 일시적으로 중단되었습니다.\n\n금일(15일) 내로 재개 예정이며,\n재개되는 대로, 왁물원을 통해 공지할 예정이니 참고 부탁드립니다.');
 
     // 2025-03-14 왁겜즈 서버 점검
-    alert('왁타버스 게임즈 측 서버 점검으로 인하여, 왁겜즈 로그인이 일시적으로 중단되었습니다.\n예상 재개 시간은 금일 22시 예정입니다.\n\n이 점 많은 양해 부탁드리며, 문의 사항은 admin@wakttu.kr로 부탁드립니다.');
+    alert('왁타버스 게임즈 측 서버 점검이 진행 중입니다.\n예상 재개 시간은 금일 22시 예정입니다.\n\n이 점 많은 양해 부탁드리며, 문의 사항은 admin@wakttu.kr로 부탁드립니다.');
   
     // 기타 (왁겜즈 서버 장애)
     // alert('왁타버스 게임즈의 서버 장애 등으로 인하여, 왁겜즈 로그인이 일시적으로 중단되었습니다.\n\n이 점 많은 양해 부탁드리며, 문의 사항은 admin@wakttu.kr로 부탁드립니다.');
